crash while staying in circle select mode and clicking in another editor #63255

Closed
opened 2019-04-03 18:19:16 +02:00 by ward · 8 comments

win 10
amd radeon
intel i5

blewender 2.8

99d4321fef

While in mesh edit mode , circle select .
Wihtout going out of circle select mode , click in any other editor results n an instant crash 1.jpg

win 10 amd radeon intel i5 blewender 2.8 99d4321feff6 While in mesh edit mode , circle select . Wihtout going out of circle select mode , click in any other editor results n an instant crash ![1.jpg](https://archive.blender.org/developer/F6909243/1.jpg)
Author

Added subscriber: @gentleclockdivider

Added subscriber: @gentleclockdivider

Added subscriber: @rjg

Added subscriber: @rjg

I can confirm.

I can confirm.

After having a quick look it seems that mesh_circle_select() in view3d_select.c and all functions called by it, don't check if the coordinates are outside the viewport, which ultimately results in GPU_select_buffer_stride_realign() failing an assert.

issue_debug_notification(const wchar_t * const message) line 28	C++
__acrt_report_runtime_error(const wchar_t * message) line 154	C++
abort() line 61	C++
GPU_select_buffer_stride_realign(const rcti * src, const rcti * dst, unsigned int * r_buf) line 225	C
DRW_framebuffer_select_id_read(const rcti * rect, unsigned int * r_buf) line 2572	C
ED_view3d_select_id_read_rect(ViewContext * vc, const rcti * clip, unsigned int * r_buf_len) line 310	C
ED_view3d_select_id_read(ViewContext * vc, int xmin, int ymin, int xmax, int ymax, unsigned int * r_buf_len) line 357	C
EDBM_backbuf_circle_init(ViewContext * vc, short xs, short ys, short rads) line 351	C
mesh_circle_select(ViewContext * vc, <unnamed-enum-SEL_OP_ADD> sel_op, const int * mval, float rad) line 3019	C
obedit_circle_select(ViewContext * vc, const <unnamed-enum-SEL_OP_ADD> sel_op, const int * mval, float rad) line 3442	C
view3d_circle_select_exec(bContext * C, wmOperator * op) line 3521	C
gesture_circle_apply(bContext * C, wmOperator * op) line 327	C
WM_gesture_circle_modal(bContext * C, wmOperator * op, const wmEvent * event) line 389	C
wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) line 2057	C
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) line 2676	C
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) line 2720	C
wm_event_do_handlers(bContext * C) line 3071	C
WM_main(bContext * C) line 421	C
main(int argc, const unsigned char * * UNUSED_argv_c) line 507	C
After having a quick look it seems that `mesh_circle_select()` in `view3d_select.c` and all functions called by it, don't check if the coordinates are outside the viewport, which ultimately results in `GPU_select_buffer_stride_realign()` failing an assert. ``` issue_debug_notification(const wchar_t * const message) line 28 C++ __acrt_report_runtime_error(const wchar_t * message) line 154 C++ abort() line 61 C++ GPU_select_buffer_stride_realign(const rcti * src, const rcti * dst, unsigned int * r_buf) line 225 C DRW_framebuffer_select_id_read(const rcti * rect, unsigned int * r_buf) line 2572 C ED_view3d_select_id_read_rect(ViewContext * vc, const rcti * clip, unsigned int * r_buf_len) line 310 C ED_view3d_select_id_read(ViewContext * vc, int xmin, int ymin, int xmax, int ymax, unsigned int * r_buf_len) line 357 C EDBM_backbuf_circle_init(ViewContext * vc, short xs, short ys, short rads) line 351 C mesh_circle_select(ViewContext * vc, <unnamed-enum-SEL_OP_ADD> sel_op, const int * mval, float rad) line 3019 C obedit_circle_select(ViewContext * vc, const <unnamed-enum-SEL_OP_ADD> sel_op, const int * mval, float rad) line 3442 C view3d_circle_select_exec(bContext * C, wmOperator * op) line 3521 C gesture_circle_apply(bContext * C, wmOperator * op) line 327 C WM_gesture_circle_modal(bContext * C, wmOperator * op, const wmEvent * event) line 389 C wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) line 2057 C wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) line 2676 C wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) line 2720 C wm_event_do_handlers(bContext * C) line 3071 C WM_main(bContext * C) line 421 C main(int argc, const unsigned char * * UNUSED_argv_c) line 507 C ```

This issue was referenced by 3464a53477

This issue was referenced by 3464a534770b551c60f43e422024712d0947cd81

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Nice catch!
It was an unnoticed flaw in the recent changes in the selection code.

Nice catch! It was an unnoticed flaw in the recent changes in the selection code.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63255
No description provided.