Fix T63255: Crash when circle select performs selection outside the viewport's bounds.